--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ Flask-SQLAlchemy==1.0
 Jinja2==2.7.3
 SQLAlchemy==0.9.6
 gunicorn==19.0.0
-psycopg2-binary==2.8
+psycopg2==2.7.6.1
+psycopg2-binary==2.7.6.1
